<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".section_news"
    android:fillViewport="true"
    tools:ignore="SpeakableTextPresentCheck">


    <GridLayout
        android:layout_width="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="10dp"
        android:columnCount="2"
        android:rowCount="3"
        android:layout_height="0dp">



        <androidx.cardview.widget.CardView

            android:id="@+id/ent"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:cardCornerRadius="20dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="13dp"
            app:cardElevation="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/ent"
                >



                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ent"
                    android:textStyle="bold"
                    android:gravity="center_horizontal"
                    android:textSize="16sp"
                    android:layout_marginTop="16sp"
                    android:layout_centerHorizontal="true"
                    android:textColor="@color/white" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:id="@+id/sp"
            android:layout_height="0dp"
            app:cardCornerRadius="20dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="13dp"
            app:cardElevation="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/sp"
                >



                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sp"
                    android:textStyle="bold"
                    android:gravity="center_horizontal"
                    android:textSize="16sp"
                    android:layout_marginTop="16sp"
                    android:layout_centerHorizontal="true"
                    android:textColor="@color/white" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/hea"
            app:cardCornerRadius="20dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="13dp"
            app:cardElevation="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/health"
                >



                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/health"
                    android:textStyle="bold"
                    android:gravity="center_horizontal"
                    android:textSize="16sp"
                    android:layout_marginTop="16sp"
                    android:layout_centerHorizontal="true"
                    android:textColor="@color/white" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:cardCornerRadius="20dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:id="@+id/tech"
            android:layout_margin="13dp"
            app:cardElevation="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/tech"
                >



                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tech"
                    android:textStyle="bold"
                    android:gravity="center_horizontal"
                    android:textSize="16sp"
                    android:layout_marginTop="16sp"
                    android:layout_centerHorizontal="true"
                    android:textColor="@color/white" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:cardCornerRadius="20dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:id="@+id/bus"
            android:layout_margin="13dp"
            app:cardElevation="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bus"
                >



                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bus"
                    android:textStyle="bold"
                    android:gravity="center_horizontal"
                    android:textSize="16sp"
                    android:layout_marginTop="16sp"
                    android:layout_centerHorizontal="true"
                    android:textColor="@color/white" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:cardCornerRadius="20dp"
            android:id="@+id/sci"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="13dp"
            app:cardElevation="8dp">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:background="@drawable/sci"
                >



                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sci"
                    android:textStyle="bold"
                    android:gravity="center_horizontal"
                    android:textSize="16sp"
                    android:layout_marginTop="16sp"
                    android:layout_centerHorizontal="true"
                    android:textColor="@color/white" />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>


    </GridLayout>



</androidx.constraintlayout.widget.ConstraintLayout>